# ai-python-coding-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
01_ai_workflow/: 00_test.py  01_ai_workflow.py  README.md  ai_coding_workflow_report_20250609_112326.md  ai_coding_workflow_report_20250609_113613.md  ai_coding_workflow_report_20250609_114828.md  ai_coding_workflow_report_20250609_121927.md  ai_coding_workflow_report_20250609_124127.md  ai_coding_workflow_report_20250609_131001.md  ai_coding_workflow_report_20250609_133008.md  ai_coding_workflow_report_20250609_135405.md  ai_coding_workflow_report_20250609_155832.md  ai_coding_workflow_report_20250609_160213.md  ai_coding_workflow_report_20250609_160708.md  ai_coding_workflow_report_20250609_175520.md  ai_coding_workflow_report_20250609_180125.md  ai_coding_workflow_report_20250609_181610.md  ai_coding_workflow_report_20250609_183225.md  ai_coding_workflow_report_20250609_183928.md
02_ai_agent/: 02_ai_agent_burr.py  02_ai_agent_test.py  README.md  ai_agent_strands.py  ai_workflow_diagram.md  strands_agent_session_report_20250610_164331.md  strands_agent_session_report_20250610_170922.md  test_enhanced_iterative_improvement.py
